Fix/ Z-index added

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,5 +1,7 @@
 .footer {
     background-color: #111;
+    position: relative;
+        z-index: -1;
 }
 .footerContainer {
     width: 80%;
