--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -107,6 +107,8 @@ nav a:hover {
 /* carouselle section */
 
 .carousel__wrapper {
+  position: relative;
+  z-index: -1;
   padding: 1em;
   margin: 0 auto;
   max-width: 60%;
@@ -114,7 +116,6 @@ nav a:hover {
   text-align: center;
   animation-name: slideUp;
   animation-duration: 1s;
-
   @media (max-width: 600px) {
     max-width: 80%;
     height: auto;
